test/llvm/macros/complex-macro-type.good
complex-macro-type.chpl:1: error: Could not find C type for ComplexType
