test/llvm/macros/complex-macro-type.chpl
extern type ComplexType;

proc main() {
  var a: ComplexType;
  writeln(c_ptrTo(a):c_void_ptr);
}
